--- a/content/blog/计算机基础/算法/LeetCode/2、算法.md
+++ b/content/blog/计算机基础/算法/LeetCode/2、算法.md
@@ -1,3 +1,16 @@
+---
+title: 🧠 Sharpen your thinking with a second brain
+summary: Create a personal knowledge base and share your knowledge with your peers.
+date: 2025-08-05
+authors:
+  - admin
+tags:
+  - Second Brain
+  - Markdown
+image:
+  caption: 'Image credit: [**Unsplash**](https://unsplash.com)'
+---
+
 # 常用算法
 
 ## 概述常用的算法
