代码块颜色测试修改

--- a/content/blog/计算机基础/算法/LeetCode/2、算法.md
+++ b/content/blog/计算机基础/算法/LeetCode/2、算法.md
@@ -9,6 +9,8 @@ tags:
   - Markdown
 image:
   caption: 'Image credit: [**Unsplash**](https://unsplash.com)'
+design:
+  css_class: 'custom.css'
 ---
 
 # 常用算法
