代码块颜色测试修改

--- a/content/blog/计算机基础/算法/LeetCode/2、算法.md
+++ b/content/blog/计算机基础/算法/LeetCode/2、算法.md
@@ -10,7 +10,7 @@ tags:
 image:
   caption: 'Image credit: [**Unsplash**](https://unsplash.com)'
 design:
-  css_class: 'custom.css'
+  css_class: 'css/custom.css'
 ---
 
 # 常用算法
