代码块颜色测试修改

--- a/content/blog/计算机基础/算法/LeetCode/2、算法.md
+++ b/content/blog/计算机基础/算法/LeetCode/2、算法.md
@@ -9,9 +9,6 @@ tags:
   - Markdown
 image:
   caption: 'Image credit: [**Unsplash**](https://unsplash.com)'
-markup:
-  highlight:
-    style: github-dark
 ---
 
 # 常用算法
@@ -26,7 +23,7 @@ markup:
 
 我个人比较喜欢如下方式
 
-```java
+```java {class="highlight" id="my-codeblock" lineNos=inline tabWidth=2}
     int left = 0, right = nums.length - 1;
     int mid;
 
