结构修改，md文件配置信息填充，icon设置

--- a/content/blog/java/jvm/1、自动内存管理.md
+++ b/content/blog/java/jvm/1、自动内存管理.md
@@ -1,3 +1,13 @@
+---
+title: 🔐 jvm自动内存管理
+summary: 解析jvm运行中内存如何分配
+date: 2025-08-05
+authors:
+  - admin
+tags:
+  - java
+  - jvm
+---
 ## 运行时内存划分
 
 ### 程序计数器
