--- a/content/blog/计算机基础/算法/LeetCode/0、概述.md
+++ b/content/blog/计算机基础/算法/LeetCode/0、概述.md
@@ -1,3 +1,15 @@
+---
+title: ❌ LeetCode
+summary: 记录LeetCode上自己刷的很有意思或者启发性或者代表性的算法题
+date: 2025-08-05
+authors:
+  - admin
+tags:
+  - 计算机基础
+  - 算法
+  - LeetCode
+---
+
 ## 概述
 记录LeetCode上自己刷的很有意思或者启发性或者代表性的算法题
 
