--- a/content/blog/计算机基础/算法/LeetCode/1、数据结构.md
+++ b/content/blog/计算机基础/算法/LeetCode/1、数据结构.md
@@ -1,3 +1,14 @@
+---
+title: 🎨 常用数据结构
+summary: 使用到的数据结构汇总
+date: 2025-08-05
+authors:
+  - admin
+tags:
+  - 计算机基础
+  - 数据结构
+  - LeetCode
+---
 # 常用数据结构
 
 ## 概述
