--- a/content/blog/计算机基础/算法/LeetCode/2、算法.md
+++ b/content/blog/计算机基础/算法/LeetCode/2、算法.md
@@ -1,14 +1,13 @@
 ---
-title: 🧠 Sharpen your thinking with a second brain
-summary: Create a personal knowledge base and share your knowledge with your peers.
+title: 🧠 常用算法
+summary: 个人平时经常使用的算法汇总
 date: 2025-08-05
 authors:
   - admin
 tags:
-  - Second Brain
-  - Markdown
-image:
-  caption: 'Image credit: [**Unsplash**](https://unsplash.com)'
+  - 计算机基础
+  - 算法
+  - LeetCode
 ---
 
 # 常用算法
