--- a/content/blog/计算机基础/计算机网络/0、概述.md
+++ b/content/blog/计算机基础/计算机网络/0、概述.md
@@ -1,3 +1,13 @@
+---
+title: 🍆 计算机网络概述
+summary: 本篇主要讲述自己学习计算机网络后的一些思考后的总结。
+date: 2025-08-05
+authors:
+  - admin
+tags:
+  - 计算机基础
+  - 计算机网络
+---
 # 概述
 
 本篇主要讲述自己学习计算机网络后的一些思考后的总结。
