--- a/content/blog/计算机基础/设计模式/0、简介.md
+++ b/content/blog/计算机基础/设计模式/0、简介.md
@@ -1,3 +1,13 @@
+---
+title: 🍔 设计模式
+summary: 还没动工，占个坑先~
+date: 2025-08-05
+authors:
+  - admin
+tags:
+  - 计算机基础
+  - 设计模式
+---
 ### 什么是设计模式
 
 ### 为什么要使用设计模式
