图片备注修改

--- a/content/blog/计算机基础/计算机组成原理/0、概述.md
+++ b/content/blog/计算机基础/计算机组成原理/0、概述.md
@@ -43,7 +43,7 @@ tags:
 
 首先明确一个观点，为什么要有原码反码补码的设定，本质上是为了解决负数在计算机中的表示形式，使得所有的加减法都可以写成1 + (-3) + (5) + (-7)这种纯加法的形式，硬件只处理加法，就能够得到正确的结果。
 
-那怎么表示负数表示来解决这个问题呢？![二进制补码图](../二进制补码图.png "二进制补码图")
+那怎么表示负数表示来解决这个问题呢？![二进制补码图](../二进制补码图.png)
 即定义负数的二进制为还差多少越界即可，比如-1，就是顺时钟走了255格，还差一格越界为0。
 
 那么对于64 + (-1) 来说，就是顺指针走255格，相当于逆时针走一格，也就是63了。
@@ -63,7 +63,7 @@ tags:
 #### 浮点数
 
 二进制的科学计数法表示：
-![浮点数](../浮点数.png "浮点数")
+![浮点数](../浮点数.png)
 $$S*M*2^E$$
 值得一提的是，同样是64为长整数和64为浮点数，浮点数的表示范围会远远大于长整数，但是由于尾数部分只有52位，当同样表示大于52的整数时，浮点数会由于尾数存不下这么大数导致丢失精度。
 
